* Fix vertical align of registration form
git-svn-id: https://svn.code.sf.net/p/jezvemoney/code-0/branches/design@347 47cf728b-45b6-4a0a-a543-cdce7c6e2aab

--- a/css/login.css
+++ b/css/login.css
@@ -9,6 +9,12 @@
 }
 
 
+.register_cont
+{
+	margin-top: -112px;
+}
+
+
 .box
 {
 	max-width: 600px;
